--- a/smsreceiver/build.gradle
+++ b/smsreceiver/build.gradle
@@ -1,10 +1,11 @@
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
     defaultConfig {
+        applicationId "me.pearjelly.smsreceiver"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -16,13 +17,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    applicationVariants.all { variant ->
+        variant.outputs.each { output ->
+            def file = output.outputFile
+            output.outputFile = new File(file.parent, "smsreceiver_${versionName}_${variant.dirName}.apk")
+        }
+    }
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:23.+'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.squareup.retrofit2:retrofit:2.0.2'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
-    compile project(':common')
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile project(':net')
 }
