--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.0'
@@ -16,6 +17,9 @@ allprojects {
         jcenter()
         flatDir {
             dirs 'libs'
+        }
+        maven {
+            url 'http://www.idescout.com/maven/repo/'
         }
     }
 }
